--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
-name: RoscaS aime la viande et les animaux !
+name: Hank Quinlan, Horrible Cop
 markdown: kramdown
+permalink: /blog/:year/:month/:day/:title
