--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,2 @@
-name: Hank Quinlan, Horrible Cop
+name: RoscaS aime la viande et les animaux !
 markdown: kramdown
-permalink: /blog/:year/:month/:day/:title
