--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: RoscaS's notes
+title: <Hello-world />
 author: RoscaS
 email: RoscaS@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Take notes !
+  Take notes and use Ptr !
 
 # twitter_username: RoscaS
 github_username:  RoscaS
