--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: <Hello-world />
 author: RoscaS
-email: RoscaS@gmail.com
+email: sol.rosca@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Take notes and use Ptr !
 
@@ -14,8 +14,9 @@ minima:
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
-#header_pages:
-# - about.html
+header_pages:
+- about.html
+- blog.html
 
 # Build settings
 markdown: kramdown
