--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 // Place your settings in this file to overwrite default and user settings.
 {
-    "editor.lineNumbers": "off"
+    "editor.lineNumbers": "off",
+    "editor.fontSize": 16,
+    "editor.fontFamily": "operator pro medium",
+    "editor.fontWeight": "300",
 }
