--- a/_config.yml
+++ b/_config.yml
@@ -17,3 +17,6 @@ skillstree: false # turn on or off the skills tree in about page
 # Build settings
 permalink: none
 markdown: kramdown
+
+# gems:
+#   - jekyll-gist
