--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,4 +4,5 @@
     "editor.fontSize": 20,
     "editor.fontFamily": "operator pro medium",
     "editor.fontWeight": "300",
+    "editor.renderIndentGuides": false
 }
