--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,18 @@
     "editor.fontSize": 20,
     "editor.fontFamily": "operator pro medium",
     "editor.fontWeight": "300",
-    "editor.renderIndentGuides": false
+    "editor.renderIndentGuides": false,
+    "editor.minimap.enabled": true,
+    "editor.minimap.renderCharacters": false,
+    "editor.minimap.maxColumn": 60,
+    "emmet.excludeLanguages": [
+
+    ],
+    "emmet.useNewEmmet": false,
+    "[markdown]": {
+        "editor.wordWrap": "on",
+        "editor.quickSuggestions": true
+    },
+    "editor.tabCompletion": true,
+    "editor.acceptSuggestionOnEnter": "off"
 }
