--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,8 @@
 {
     "editor.lineNumbers": "off",
     "editor.fontSize": 20,
-    "editor.fontFamily": "operator pro medium",
-    "editor.fontWeight": "300",
+    "editor.fontFamily": "operator mono",
+    "editor.fontWeight": "900",
     "editor.renderIndentGuides": false,
     "editor.minimap.enabled": true,
     "editor.minimap.renderCharacters": false,
