--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 // Place your settings in this file to overwrite default and user settings.
 {
     "editor.lineNumbers": "off",
-    "editor.fontSize": 20,
-    "editor.fontFamily": "operator pro medium",
+    "editor.fontSize": 22,
+    "editor.fontFamily": "operator mono",
     "editor.fontWeight": "300",
     "editor.renderIndentGuides": false,
     "editor.minimap.enabled": true,
