--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
 {
     "editor.lineNumbers": "off",
     "editor.fontSize": 22,
-    "editor.fontFamily": "operator mono",
+    "editor.fontFamily": "operator pro medium",
     "editor.fontWeight": "300",
     "editor.renderIndentGuides": false,
     "editor.minimap.enabled": true,
