--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
 {
     "editor.minimap.enabled": true,
     "editor.minimap.renderCharacters": false,
-    "editor.minimap.maxColumn": 60
+    "editor.minimap.maxColumn": 60,
+    "editor.fontFamily": "operator pro",
+    "editor.fontWeight": "400"
 }
