--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,10 @@
     "editor.minimap.renderCharacters": false,
     "editor.minimap.maxColumn": 60,
     "editor.fontFamily": "operator pro",
-    "editor.fontWeight": "400"
+    "editor.fontWeight": "400",
+    "editor.lineNumbers": "off",
+
+    "editor.overviewRulerLanes": 0,
+    "editor.overviewRulerBorder": false,
+    "editor.glyphMargin": false
 }
