--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,7 @@
 
     "editor.overviewRulerLanes": 0,
     "editor.overviewRulerBorder": false,
-    "editor.glyphMargin": false
+    "editor.glyphMargin": false,
+    "editor.wordWrap": "bounded"
+    // "rewrap.wrappingColumn": 15
 }
