--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,11 +5,5 @@
     "editor.minimap.maxColumn": 60,
     "editor.fontFamily": "operator pro",
     "editor.fontWeight": "400",
-    "editor.lineNumbers": "off",
-
-    "editor.overviewRulerLanes": 0,
-    "editor.overviewRulerBorder": false,
-    "editor.glyphMargin": false,
-    "editor.wordWrap": "bounded"
-    // "rewrap.wrappingColumn": 15
+    "editor.lineNumbers": "off"
 }
