--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
     "editor.minimap.enabled": true,
     "editor.minimap.renderCharacters": false,
     "editor.minimap.maxColumn": 60,
-    "editor.fontFamily": "operator pro",
-    "editor.fontWeight": "400",
+    "editor.fontFamily": "operator mono",
+    "editor.fontWeight": "300",
     "editor.lineNumbers": "off"
 }
