--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "editor.minimap.enabled": true,
     "editor.minimap.renderCharacters": false,
     "editor.minimap.maxColumn": 60,
-    "editor.lineNumbers": "off"
+    "editor.lineNumbers": "off",
+    "editor.wordBasedSuggestions": true
 }
