--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
     "editor.minimap.enabled": true,
     "editor.minimap.renderCharacters": false,
     "editor.minimap.maxColumn": 60,
-    "editor.lineNumbers": "off",
+    "editor.lineNumbers": "on",
     "editor.wordBasedSuggestions": true,
     "python.pythonPath": "/usr/bin/python3.5"
 }
